; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/msm/dsi/pll/extr_dsi_pll_28nm.c_pll_28nm_poll_for_ready.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/msm/dsi/pll/extr_dsi_pll_28nm.c_pll_28nm_poll_for_ready.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dsi_pll_28nm = type { i64 }

@REG_DSI_28nm_PHY_PLL_STATUS = common dso_local global i64 0, align 8
@DSI_28nm_PHY_PLL_STATUS_PLL_RDY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"DSI PLL is %slocked\00", align 1
@.str.1 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.2 = private unnamed_addr constant [7 x i8] c"*not* \00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dsi_pll_28nm*, i32, i32)* @pll_28nm_poll_for_ready to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pll_28nm_poll_for_ready(%struct.dsi_pll_28nm* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.dsi_pll_28nm*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.dsi_pll_28nm* %0, %struct.dsi_pll_28nm** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %7, align 4
  br label %9

9:                                                ; preds = %30, %3
  %10 = load i32, i32* %5, align 4
  %11 = add nsw i32 %10, -1
  store i32 %11, i32* %5, align 4
  %12 = icmp ne i32 %10, 0
  br i1 %12, label %13, label %33

13:                                               ; preds = %9
  %14 = load %struct.dsi_pll_28nm*, %struct.dsi_pll_28nm** %4, align 8
  %15 = getelementptr inbounds %struct.dsi_pll_28nm, %struct.dsi_pll_28nm* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* @REG_DSI_28nm_PHY_PLL_STATUS, align 8
  %18 = add nsw i64 %16, %17
  %19 = call i32 @pll_read(i64 %18)
  store i32 %19, i32* %8, align 4
  %20 = load i32, i32* %8, align 4
  %21 = load i32, i32* @DSI_28nm_PHY_PLL_STATUS_PLL_RDY, align 4
  %22 = and i32 %20, %21
  %23 = icmp ne i32 %22, 0
  %24 = xor i1 %23, true
  %25 = xor i1 %24, true
  %26 = zext i1 %25 to i32
  store i32 %26, i32* %7, align 4
  %27 = load i32, i32* %7, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %30

29:                                               ; preds = %13
  br label %33

30:                                               ; preds = %13
  %31 = load i32, i32* %6, align 4
  %32 = call i32 @udelay(i32 %31)
  br label %9

33:                                               ; preds = %29, %9
  %34 = load i32, i32* %7, align 4
  %35 = icmp ne i32 %34, 0
  %36 = zext i1 %35 to i64
  %37 = select i1 %35, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0)
  %38 = call i32 @DBG(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i8* %37)
  %39 = load i32, i32* %7, align 4
  ret i32 %39
}

declare dso_local i32 @pll_read(i64) #1

declare dso_local i32 @udelay(i32) #1

declare dso_local i32 @DBG(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
